--- a/colored.html
+++ b/colored.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+      <meta charset="utf-8">
     <style>
 		html, body {
 		  margin: 0;
@@ -137,7 +139,7 @@
 		            circle.style.opacity = 0;
 		          	circle.style.width = "300px";
 		          	circle.style.height = "300px";
-		          }, 1);
+		          }, 500);
 
 		          setTimeout(function(){
 		          	document.body.removeChild(circle);
